--- a/src/pages/list-master/list-master.scss
+++ b/src/pages/list-master/list-master.scss
@@ -6,3 +6,13 @@ page-list-master {
   display: flex;
   align-items: center;
 }
+ion-title{
+  font-family: Open sans;
+  font-weight: bold !important;
+  color: #448FFB !important;
+  text-align: center;
+}
+.toolbar-title-md{
+  font-weight: bold !important;
+  color: #448FFB !important;
+}
