--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,2 +1,17 @@
 page-login {
 }
+ion-content{
+    
+}
+.myLogin{
+    width: 90%;
+    height: 90%;
+    padding: 5%;
+    background: #fff;
+    border-radius: 10px;
+    margin: 5% !important;
+}
+.loginBtn{
+    border-radius: 50px !important;
+    background: #FE8B35 !important;
+}
